rust/libyrs.h


typedef struct YDoc {} YDoc;
typedef struct Branch {} Branch;
typedef struct YUndoManager {} YUndoManager;
typedef struct YSubscription {} YSubscription;
typedef struct TransactionInner TransactionInner;
typedef YDoc YDoc;
typedef Branch Branch;
typedef union YOutputContent {
  uint8_t flag;
  double num;
  int64_t integer;
  char *str;
  const char *buf;
  struct YOutput *array;
  struct YMapEntry *map;
  Branch *y_type;
  YDoc *y_doc;
} YOutputContent;
typedef struct YOutput {
  int8_t tag;
  uint32_t len;
  union YOutputContent value;
} YOutput;
typedef struct YMapEntry {
  const char *key;
  const struct YOutput *value;
} YMapEntry;
typedef YSubscription YSubscription;
typedef struct YAfterTransactionEvent {
  struct YStateVector before_state;
  struct YStateVector after_state;
  struct YDeleteSet delete_set;
} YAfterTransactionEvent;
typedef struct YSubdocsEvent {
  uint32_t added_len;
  uint32_t removed_len;
  uint32_t loaded_len;
  YDoc **added;
  YDoc **removed;
  YDoc **loaded;
} YSubdocsEvent;
typedef struct TransactionInner YTransaction;
typedef union YInputContent {
  uint8_t flag;
  double num;
  int64_t integer;
  char *str;
  char *buf;
  struct YInput *values;
  struct YMapInputData map;
  YDoc *doc;
  const Weak *weak;
} YInputContent;
typedef struct YInput {
  int8_t tag;
  uint32_t len;
  union YInputContent value;
} YInput;
typedef struct YChunk {
  struct YOutput data;
  uint32_t fmt_len;
  struct YMapEntry *fmt;
} YChunk;
typedef struct YTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YTextEvent;
typedef struct YMapEvent {
  const void *inner;
  const TransactionMut *txn;
} YMapEvent;
typedef struct YArrayEvent {
  const void *inner;
  const TransactionMut *txn;
} YArrayEvent;
typedef struct YXmlEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlEvent;
typedef struct YXmlTextEvent {
  const void *inner;
  const TransactionMut *txn;
} YXmlTextEvent;
typedef struct YWeakLinkEvent {
  const void *inner;
  const TransactionMut *txn;
} YWeakLinkEvent;
typedef struct YEvent {
  int8_t tag;
  union YEventContent content;
} YEvent;
typedef struct YUndoEvent {
  char kind;
  const char *origin;
  uint32_t origin_len;
  void *meta;
} YUndoEvent;
void ystring_destroy(char *str);
YSubscription *ydoc_observe_updates_v1(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_updates_v2(YDoc *doc, void *state, void (*cb)(void*,
                                                                          uint32_t,
                                                                          const char*));
YSubscription *ydoc_observe_after_transaction(YDoc *doc,
                                              void *state,
                                              void (*cb)(void*, struct YAfterTransactionEvent*));
YSubscription *ydoc_observe_subdocs(YDoc *doc,
                                    void *state,
                                    void (*cb)(void*, struct YSubdocsEvent*));
YSubscription *ydoc_observe_clear(YDoc *doc, void *state, void (*cb)(void*, YDoc*));
uint32_t ytext_len(const Branch *txt, const YTransaction *txn);
uint32_t yxmltext_len(const Branch *txt, const YTransaction *txn);
void yxmltext_insert(const Branch *txt,
                     YTransaction *txn,
                     uint32_t index,
                     const char *str,
                     const struct YInput *attrs);
void yxmltext_insert_embed(const Branch *txt,
                           YTransaction *txn,
                           uint32_t index,
                           const struct YInput *content,
                           const struct YInput *attrs);
void yxmltext_format(const Branch *txt,
                     YTransaction *txn,
                     uint32_t index,
                     uint32_t len,
                     const struct YInput *attrs);
void yxmltext_remove_range(const Branch *txt, YTransaction *txn, uint32_t idx, uint32_t len);
void yxmltext_insert_attr(const Branch *txt,
                          YTransaction *txn,
                          const char *attr_name,
                          const char *attr_value);
void yxmltext_remove_attr(const Branch *txt, YTransaction *txn, const char *attr_name);
char *yxmltext_get_attr(const Branch *txt, const YTransaction *txn, const char *attr_name);
struct YChunk *ytext_chunks(const Branch *txt, const YTransaction *txn, uint32_t *chunks_len);
void ychunks_destroy(struct YChunk *chunks, uint32_t len);
void youtput_destroy(struct YOutput *val);
struct YInput yinput_null(void);
struct YInput yinput_undefined(void);
struct YInput yinput_bool(uint8_t flag);
struct YInput yinput_float(double num);
struct YInput yinput_long(int64_t integer);
YSubscription *ytext_observe(const Branch *txt, void *state, void (*cb)(void*,
                                                                        const struct YTextEvent*,
                                                                        uint32_t,
                                                                        const char*));
YSubscription *ymap_observe(const Branch *map, void *state, void (*cb)(void*,
                                                                       const struct YMapEvent*));
YSubscription *yarray_observe(const Branch *array,
                              void *state,
                              void (*cb)(void*, const struct YArrayEvent*));
YSubscription *yxmlelem_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlEvent*));
YSubscription *yxmltext_observe(const Branch *xml,
                                void *state,
                                void (*cb)(void*, const struct YXmlTextEvent*));
YSubscription *yobserve_deep(Branch *ytype, void *state, void (*cb)(void*,
                                                                    uint32_t,
                                                                    const struct YEvent*));
YSubscription *yundo_manager_observe_added(YUndoManager *mgr,
                                           void *state,
                                           void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yundo_manager_observe_popped(YUndoManager *mgr,
                                            void *state,
                                            void (*callback)(void*, const struct YUndoEvent*));
YSubscription *yweak_observe(const Branch *weak,
                             void *state,
                             void (*cb)(void*, const struct YWeakLinkEvent*));