lib/src/ffi/y_dart_bindings_generated.dart


  /// Inserts a null-terminated UTF-8 encoded string a a given `index`. `index` value must be between
  /// 0 and a length of a `YXmlText` (inclusive, accordingly to [yxmltext_len] return value), otherwise
  /// this function will panic.
  ///
  /// A `str` parameter must be a null-terminated UTF-8 encoded string. This function doesn't take
  /// ownership over a passed value - it will be copied and therefore a string parameter must be
  /// released by the caller.
  ///
  /// A nullable pointer with defined `attrs` will be used to wrap provided text with
  /// a formatting blocks. `attrs` must be a map-like type.
  void yxmltext_insert(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    int index,
    ffi.Pointer<ffi.Char> str,
    ffi.Pointer<YInput> attrs,
  ) {
    return _yxmltext_insert(
      txt,
      txn,
      index,
      str,
      attrs,
    );
  }

  late final _yxmltext_insertPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Uint32,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<YInput>)>>('yxmltext_insert');
  late final _yxmltext_insert = _yxmltext_insertPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int,
          ffi.Pointer<ffi.Char>, ffi.Pointer<YInput>)>();

  /// Inserts an embed content given `index`. `index` value must be between 0 and a length of a
  /// `YXmlText` (inclusive, accordingly to [ytext_len] return value), otherwise this
  /// function will panic.
  ///
  /// A `str` parameter must be a null-terminated UTF-8 encoded string. This function doesn't take
  /// ownership over a passed value - it will be copied and therefore a string parameter must be
  /// released by the caller.
  ///
  /// A nullable pointer with defined `attrs` will be used to wrap provided text with
  /// a formatting blocks. `attrs` must be a map-like type.
  void yxmltext_insert_embed(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    int index,
    ffi.Pointer<YInput> content,
    ffi.Pointer<YInput> attrs,
  ) {
    return _yxmltext_insert_embed(
      txt,
      txn,
      index,
      content,
      attrs,
    );
  }

  late final _yxmltext_insert_embedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Uint32,
              ffi.Pointer<YInput>,
              ffi.Pointer<YInput>)>>('yxmltext_insert_embed');
  late final _yxmltext_insert_embed = _yxmltext_insert_embedPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int,
          ffi.Pointer<YInput>, ffi.Pointer<YInput>)>();

  /// Wraps an existing piece of text within a range described by `index`-`len` parameters with
  /// formatting blocks containing provided `attrs` metadata. `attrs` must be a map-like type.
  void yxmltext_format(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    int index,
    int len,
    ffi.Pointer<YInput> attrs,
  ) {
    return _yxmltext_format(
      txt,
      txn,
      index,
      len,
      attrs,
    );
  }

  late final _yxmltext_formatPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Uint32, ffi.Uint32, ffi.Pointer<YInput>)>>('yxmltext_format');
  late final _yxmltext_format = _yxmltext_formatPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int, int,
          ffi.Pointer<YInput>)>();

  /// Removes a range of characters, starting a a given `index`. This range must fit within the bounds
  /// of a current `YXmlText`, otherwise this function call will fail.
  ///
  /// An `index` value must be between 0 and the length of a `YXmlText` (exclusive, accordingly to
  /// [yxmltext_len] return value).
  ///
  /// A `length` must be lower or equal number of characters (counted as UTF chars depending on the
  /// encoding configured by `YDoc`) from `index` position to the end of of the string.
  void yxmltext_remove_range(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    int idx,
    int len,
  ) {
    return _yxmltext_remove_range(
      txt,
      txn,
      idx,
      len,
    );
  }

  late final _yxmltext_remove_rangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Uint32, ffi.Uint32)>>('yxmltext_remove_range');
  late final _yxmltext_remove_range = _yxmltext_remove_rangePtr.asFunction<
      void Function(
          ffi.Pointer<Branch>, ffi.Pointer<YTransaction>, int, int)>();

  /// Inserts an XML attribute described using `attr_name` and `attr_value`. If another attribute with
  /// the same name already existed, its value will be replaced with a provided one.
  ///
  /// Both `attr_name` and `attr_value` must be a null-terminated UTF-8 encoded strings. Their
  /// contents are being copied, therefore it's up to a function caller to properly release them.
  void yxmltext_insert_attr(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> attr_name,
    ffi.Pointer<ffi.Char> attr_value,
  ) {
    return _yxmltext_insert_attr(
      txt,
      txn,
      attr_name,
      attr_value,
    );
  }

  late final _yxmltext_insert_attrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('yxmltext_insert_attr');
  late final _yxmltext_insert_attr = _yxmltext_insert_attrPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  /// Removes an attribute from a current `YXmlText`, given its name.
  ///
  /// An `attr_name`must be a null-terminated UTF-8 encoded string.
  void yxmltext_remove_attr(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> attr_name,
  ) {
    return _yxmltext_remove_attr(
      txt,
      txn,
      attr_name,
    );
  }

  late final _yxmltext_remove_attrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>)>>('yxmltext_remove_attr');
  late final _yxmltext_remove_attr = _yxmltext_remove_attrPtr.asFunction<
      void Function(ffi.Pointer<Branch>, ffi.Pointer<YTransaction>,
          ffi.Pointer<ffi.Char>)>();

  /// Returns the value of a current `YXmlText`, given its name, or a null pointer if not attribute
  /// with such name has been found. Returned pointer is a null-terminated UTF-8 encoded string, which
  /// should be released using [ystring_destroy] function.
  ///
  /// An `attr_name` must be a null-terminated UTF-8 encoded string.
  ffi.Pointer<ffi.Char> yxmltext_get_attr(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> attr_name,
  ) {
    return _yxmltext_get_attr(
      txt,
      txn,
      attr_name,
    );
  }

  late final _yxmltext_get_attrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Char>)>>('yxmltext_get_attr');
  late final _yxmltext_get_attr = _yxmltext_get_attrPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<Branch>,
          ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>();

  /// Returns a collection of chunks representing pieces of `YText` rich text string grouped together
  /// by the same formatting rules and type. `chunks_len` is used to inform about a number of chunks
  /// generated this way.
  ///
  /// Returned array needs to be eventually deallocated using `ychunks_destroy`.
  ffi.Pointer<YChunk> ytext_chunks(
    ffi.Pointer<Branch> txt,
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Uint32> chunks_len,
  ) {
    return _ytext_chunks(
      txt,
      txn,
      chunks_len,
    );
  }

  late final _ytext_chunksPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YChunk> Function(
              ffi.Pointer<Branch>,
              ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Uint32>)>>('ytext_chunks');
  late final _ytext_chunks = _ytext_chunksPtr.asFunction<
      ffi.Pointer<YChunk> Function(ffi.Pointer<Branch>,
          ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Uint32>)>();

  /// Deallocates result of `ytext_chunks` method.
  void ychunks_destroy(
    ffi.Pointer<YChunk> chunks,
    int len,
  ) {
    return _ychunks_destroy(
      chunks,
      len,
    );
  }

  late final _ychunks_destroyPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<YChunk>, ffi.Uint32)>>(
      'ychunks_destroy');
  late final _ychunks_destroy =
      _ychunks_destroyPtr.asFunction<void Function(ffi.Pointer<YChunk>, int)>();

  /// Releases all resources related to a corresponding `YOutput` cell.
  void youtput_destroy(
    ffi.Pointer<YOutput> val,
  ) {
    return _youtput_destroy(
      val,
    );
  }

  late final _youtput_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YOutput>)>>(
          'youtput_destroy');
  late final _youtput_destroy =
      _youtput_destroyPtr.asFunction<void Function(ffi.Pointer<YOutput>)>();

  /// Function constructor used to create JSON-like NULL `YInput` cell.
  /// This function doesn't allocate any heap resources.
  YInput yinput_null() {
    return _yinput_null();
  }

  late final _yinput_nullPtr =
      _lookup<ffi.NativeFunction<YInput Function()>>('yinput_null');
  late final _yinput_null = _yinput_nullPtr.asFunction<YInput Function()>();

  /// Function constructor used to create JSON-like undefined `YInput` cell.
  /// This function doesn't allocate any heap resources.
  YInput yinput_undefined() {
    return _yinput_undefined();
  }

  late final _yinput_undefinedPtr =
      _lookup<ffi.NativeFunction<YInput Function()>>('yinput_undefined');
  late final _yinput_undefined =
      _yinput_undefinedPtr.asFunction<YInput Function()>();

  /// Function constructor used to create JSON-like boolean `YInput` cell.
  /// This function doesn't allocate any heap resources.
  YInput yinput_bool(
    int flag,
  ) {
    return _yinput_bool(
      flag,
    );
  }

  late final _yinput_boolPtr =
      _lookup<ffi.NativeFunction<YInput Function(ffi.Uint8)>>('yinput_bool');
  late final _yinput_bool = _yinput_boolPtr.asFunction<YInput Function(int)>();

  /// Function constructor used to create JSON-like 64-bit floating point number `YInput` cell.
  /// This function doesn't allocate any heap resources.
  YInput yinput_float(
    double num,
  ) {
    return _yinput_float(
      num,
    );
  }

  late final _yinput_floatPtr =
      _lookup<ffi.NativeFunction<YInput Function(ffi.Double)>>('yinput_float');
  late final _yinput_float =
      _yinput_floatPtr.asFunction<YInput Function(double)>();

  /// Function constructor used to create JSON-like 64-bit signed integer `YInput` cell.
  /// This function doesn't allocate any heap resources.
  YInput yinput_long(
    int integer,
  ) {
    return _yinput_long(
      integer,
    );
  }

  late final _yinput_longPtr =
      _lookup<ffi.NativeFunction<YInput Function(ffi.Int64)>>('yinput_long');
  late final _yinput_long = _yinput_longPtr.asFunction<YInput Function(int)>();
